[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Facility.gd" type="Script" id=1]
[ext_resource path="res://fonts/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/levels/BaseLevel.gd" type="Script" id=4]
[ext_resource path="res://fonts/SmallFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/Memo.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Human.tscn" type="PackedScene" id=7]

[sub_resource type="Curve" id=4]
max_value = 100.0
_data = [ Vector2( 0, 100 ), 0.0, 0.0, 0, 0, Vector2( 0.263547, 0 ), -8.00948, -2.68946, 0, 0, Vector2( 0.778325, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 100 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.486034, 0.712291, 1 )
colors = PoolColorArray( 0.7827, 0.975808, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=2]
resource_name = "Flicker"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 2.8, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Tick"
length = 5.0
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "check_malfunction"
} ]
}

[node name="Facility" type="Node2D"]
script = ExtResource( 1 )
level_scene = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.0666667, 0.172549, 0.882353 )

[node name="HUD" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Stats" type="VBoxContainer" parent="CanvasLayer/HUD"]
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 24.0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="ShiftStats" type="HBoxContainer" parent="CanvasLayer/HUD/Stats"]
margin_right = 312.0
margin_bottom = 10.0
size_flags_horizontal = 3

[node name="QueueSize" type="Label" parent="CanvasLayer/HUD/Stats/ShiftStats"]
margin_right = 98.0
margin_bottom = 10.0
size_flags_horizontal = 3
text = "Worker Queue: %s"
align = 1

[node name="ShiftCounter" type="Label" parent="CanvasLayer/HUD/Stats/ShiftStats"]
margin_left = 106.0
margin_right = 205.0
margin_bottom = 10.0
size_flags_horizontal = 3
text = "Shift: %s"
align = 1

[node name="Placeholder" type="Label" parent="CanvasLayer/HUD/Stats/ShiftStats"]
margin_left = 213.0
margin_right = 312.0
margin_bottom = 10.0
size_flags_horizontal = 3

[node name="DebugStats" type="HBoxContainer" parent="CanvasLayer/HUD/Stats"]
modulate = Color( 1, 1, 1, 0.458824 )
margin_top = 10.0
margin_right = 312.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="PopulationCount" type="Label" parent="CanvasLayer/HUD/Stats/DebugStats"]
margin_right = 98.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Population: 0"
align = 1

[node name="ContaminationLevel" type="Label" parent="CanvasLayer/HUD/Stats/DebugStats"]
margin_left = 106.0
margin_right = 205.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Contamination: 0.0%"
align = 1

[node name="CurrentLevel" type="Label" parent="CanvasLayer/HUD/Stats/DebugStats"]
margin_left = 213.0
margin_right = 312.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Level: 0"
align = 1

[node name="Actions" type="VBoxContainer" parent="CanvasLayer/HUD"]
margin_left = 4.0
margin_top = 140.0
margin_right = 316.0
margin_bottom = 176.0
size_flags_vertical = 8
custom_constants/separation = 4
alignment = 1

[node name="Row2" type="HBoxContainer" parent="CanvasLayer/HUD/Actions"]
margin_right = 312.0
margin_bottom = 16.0
custom_constants/separation = 8
alignment = 1

[node name="AcceptButton" type="Button" parent="CanvasLayer/HUD/Actions/Row2"]
margin_left = 106.0
margin_right = 152.0
margin_bottom = 16.0
disabled = true
text = "Accept"

[node name="RejectButton" type="Button" parent="CanvasLayer/HUD/Actions/Row2"]
margin_left = 160.0
margin_right = 206.0
margin_bottom = 16.0
disabled = true
text = "Reject"

[node name="Row1" type="HBoxContainer" parent="CanvasLayer/HUD/Actions"]
margin_top = 20.0
margin_right = 312.0
margin_bottom = 36.0
custom_constants/separation = 8
alignment = 1

[node name="SprayButton" type="Button" parent="CanvasLayer/HUD/Actions/Row1"]
margin_left = 136.0
margin_right = 176.0
margin_bottom = 16.0
disabled = true
text = "Spray"

[node name="Memo" parent="CanvasLayer/HUD" instance=ExtResource( 6 )]
visible = false
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 176.0

[node name="Contents" parent="CanvasLayer/HUD/Memo/MarginContainer" index="0"]
margin_right = 292.0
margin_bottom = 162.0

[node name="Title" parent="CanvasLayer/HUD/Memo/MarginContainer/Contents" index="0"]
margin_left = 124.0
margin_right = 148.0
text = "Memo"

[node name="BodyText" parent="CanvasLayer/HUD/Memo/MarginContainer/Contents" index="1"]
margin_right = 272.0
margin_bottom = 128.0
text = "!"

[node name="Button" parent="CanvasLayer/HUD/Memo/MarginContainer/Contents" index="2"]
margin_left = 107.0
margin_top = 136.0
margin_right = 165.0
margin_bottom = 152.0
text = "Continue"

[node name="Humans" type="Node2D" parent="."]

[node name="Human" parent="Humans" instance=ExtResource( 7 )]
position = Vector2( 180, 0 )

[node name="Human2" parent="Humans" instance=ExtResource( 7 )]
position = Vector2( 180, 0 )

[node name="Human3" parent="Humans" instance=ExtResource( 7 )]
position = Vector2( 180, 0 )

[node name="Shower" type="CPUParticles2D" parent="."]
position = Vector2( 0, -32 )
emitting = false
amount = 100
lifetime = 0.7
preprocess = 0.2
randomness = 1.0
lifetime_randomness = 0.25
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector2( 0, 1 )
initial_velocity = 70.0
initial_velocity_random = 1.0
linear_accel = 5.0
linear_accel_random = 0.5
damping = 20.0
damping_random = 1.0
damping_curve = SubResource( 4 )
scale_amount = 3.0
scale_amount_random = 1.0
color_ramp = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flicker = SubResource( 2 )
anims/Tick = SubResource( 3 )
next/Flicker = "Tick"

[node name="LevelConditions" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="pressed" from="CanvasLayer/HUD/Actions/Row2/AcceptButton" to="." method="accept_human"]
[connection signal="pressed" from="CanvasLayer/HUD/Actions/Row2/RejectButton" to="." method="reject_human"]
[connection signal="button_down" from="CanvasLayer/HUD/Actions/Row1/SprayButton" to="." method="spray_human"]
[connection signal="button_up" from="CanvasLayer/HUD/Actions/Row1/SprayButton" to="." method="stop_spray"]
[connection signal="pressed" from="CanvasLayer/HUD/Memo/MarginContainer/Contents/Button" to="." method="setup_level"]

[editable path="CanvasLayer/HUD/Memo"]
